# terminal-typer

./: LICENSE  README.md  funcao_escrita.py  pyproject.toml
terminal_typer/: __init__.py
terminal_typer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
