[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-typer"
version = "0.1.3"
description = "A Python package to print text with a typewriter effect in the terminal"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
    { name = "Johnny Matos" }
]

keywords = [
    "terminal",
    "print",
    "typing",
    "typewriter",
    "cli",
    "animation"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/DS-Johnny/terminal-typer"
Repository = "https://github.com/DS-Johnny/terminal-typer"
Issues = "https://github.com/DS-Johnny/terminal-typer/issues"

[tool.setuptools.packages.find]
where = ["."]

